[package]
name = "user-idle"
version = "0.2.1"
authors = ["Edwin Svensson <user_idle_rs@olback.net>"]
edition = "2018"
description = "Get a users idle time."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/olback/user-idle-rs"
repository = "https://github.com/olback/user-idle-rs"
readme = "README.md"
keywords = [ "idle", "gui", "ui", "user", "afk" ]

[badges]
circle-ci = { repository = "olback/user-idle-rs", branch = "master" }

[package.metadata.docs.rs]
all-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "x11" ]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18", features = [ "xlib", "xss" ], optional = true }
dbus = { version = "0.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [ "winuser", "sysinfoapi" ] }

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
mach = "0.3"
CoreFoundation-sys = "0.1"
cstr = "0.2"
