[package]
name = "user-idle"
version = "0.5.3"
authors = ["Edwin Svensson <user_idle_rs@olback.net>"]
edition = "2021"
description = "Get a users idle time."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/olback/user-idle-rs"
repository = "https://github.com/olback/user-idle-rs"
readme = "README.md"
keywords = ["idle", "gui", "ui", "user", "afk"]

[badges]
circle-ci = { repository = "olback/user-idle-rs", branch = "master" }

[package.metadata.docs.rs]
all-features = false

[features]
default = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xss"], optional = true }
dbus = { version = "0.9.7", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
mach = "0.3.2"
CoreFoundation-sys = "0.1.4"
cstr = "0.2.11"
